4.7.2 - fixed maven dependencies